# PEFT

./: .gitignore  README.md
.bmad/agents/: analyst.md  architect.md  dev.md  pm.md  security-analyst.md
.bmad/docs/: security-review.md
.bmad/docs/stories/: sec-01-lambda-url-auth.md  sec-02-cors-lockdown.md  sec-03-replace-python-jose.md  sec-04-ci-script-injection.md  sec-05-jwt-audience.md  (+16 more)
.bmad/templates/: architecture.md  prd.md  project-brief.md  security-review.md  story.md
.github/: constraints-ci.txt  constraints-train.txt  requirements-update-model.txt
.github/workflows/: ci.yml  deploy.yml  process.yml  scrape.yml  train.yml  update-model.yml
backend/: .dockerignore  pyproject.toml
backend/inference/: Dockerfile  app.py  requirements.txt
backend/scraper/: Dockerfile  clean_and_format.py  scrape_speeches.py  upload_to_s3.py
backend/scripts/: import_to_bedrock.py  launch_training.py  manage_users.py  update_endpoint.py
backend/tests/: conftest.py  test_clean_and_format.py  test_import_to_bedrock.py  test_inference_app.py  test_launch_training.py  test_manage_users.py  test_merge_adapter.py  test_scrape_speeches.py  test_train.py  test_update_endpoint.py  test_upload_to_s3.py
backend/training/: SAGEMAKER_ISSUES.md  merge_adapter.py  requirements.txt  train.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.ts  auth.ts  index.html  lib.ts  styles.css
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: auth-stack.ts  cicd-roles-stack.ts  frontend-stack.ts  inference-stack.ts  scraper-batch-stack.ts  storage-stack.ts  training-stack.ts
infra/test/: auth-stack.test.ts  cicd-roles-stack.test.ts  frontend-stack.test.ts  inference-stack.test.ts  scraper-batch-stack.test.ts  storage-stack.test.ts  training-stack.test.ts
(+3 files in other folders)
