[project]
name = "peft-backend"
version = "0.1.0"
description = "Obama Q&A model — data collection, training, and inference"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "anthropic>=0.40.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
training = [
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "peft>=0.13.0",
    "bitsandbytes>=0.44.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "trl>=0.12.0",
]
inference = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "mangum>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
